--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       </ul>
     </div>
   </nav>
+  
 
   <div class="container mt-5">
     <h1>Welcome to Auto Cars</h1>
@@ -48,27 +49,48 @@
     <!-- Add more content as needed -->
       <br />
 
-    <h1 style="text-align: center;">Purpose</h1>
+    <h1 style="text-align: center; border: 1px solid #ccc;
+    border-radius: 5px; border-color: blue; border: dotted;">Purpose</h1>
     <p style="text-align: center;"> we're in the business of making your journeys unforgettable. Whether you're planning a road trip adventure, 
         a family vacation, or a business trip, we've got the perfect wheels to get you there. Discover a world of convenience, flexibility, and affordability with our top-notch car rental services. 
     </p>
     
+<!-- Car Features Section -->
+<div class="car-features">
+  <h2>Car Features</h2>
+  <div class="row">
+      <div class="col-md-6">
+          <ul>
+              <li><strong>Sport:</strong> Sporty design, high-performance engine</li>
+              <li><strong>Luxury:</strong> Premium interiors, advanced features</li>
+              <li><strong>Sedan:</strong> Comfortable seating, ideal for city drives</li>
+          </ul>
+      </div>
+      <div class="col-md-6">
+          <ul>
+              <li><strong>SUV:</strong> Spacious, suitable for rough terrains</li>
+              <li><strong>Economic:</strong> Fuel-efficient, budget-friendly</li>
+              <li><strong>OFF-ROAD:</strong> Built for off-road adventures</li>
+          </ul>
+      </div>
   </div>
+</div>
 
-    <div>
-        <table cellspacing="50">
-    <tr >
-        <td ><input  style="color: black; background-color: orangered;" type="button" value="Privacy Statment"></button></td>
-        <td><input  style="color: black; background-color: orangered;" type="button"  value="Help"></button></td>
-        <td><input  style="color: black; background-color: orangered;" type="button"  value="How we Work"></button></td>
-    </tr>
-    <tr>
-        <td><input  style="color: black; background-color: orangered;" type="button" value="Locations"></button></td>
-        <td><input  style="color: black; background-color: orangered;" type="button" value="Our cars"></button></td>
-        <td><input  style="color: black; background-color: orangered;" type="button" value="Contact us"></button></td>
-    </tr>
-</table>
-    </div>
+
+
+    <footer class="footer">
+      <table cellspacing="50">
+        <tr >
+            <td ><input  style="color: black; background-color: orangered;" type="button" value="Privacy Statment"></button></td>
+            <td><input  style="color: black; background-color: orangered;" type="button"  value="Help"></button></td>
+            <td><input  style="color: black; background-color: orangered;" type="button"  value="How we Work"></button></td>
+        
+            <td><input  style="color: black; background-color: orangered;" type="button" value="Locations"></button></td>
+            <td><input  style="color: black; background-color: orangered;" type="button" value="Our cars"></button></td>
+            <td><input  style="color: black; background-color: orangered;" type="button" value="Contact us"></button></td>
+        </tr>
+    </table>
+</footer>
 
 
 </body>
