--- a/about.html
+++ b/about.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rent-a-Car</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <!-- Add your custom CSS file if needed -->
     <link rel="stylesheet" href="styles.css">
     <style>
-      input:hover{background: pink; color: red;}
-      input:focus{background: lightblue; color: blue;}
+      a:link {color: green;}
+      a:visited{color: blue;}
+      a:hover{color: red;}
+      a:active{color: yellow;}
     </style>
 </head>
 <body>
@@ -37,37 +39,23 @@
       <li class="nav-item">
         <a class="nav-link" href="services.html">Locations</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="About.html">About Us</a>
-      </li>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
-              <a class="nav-link" href="contact.html">Get In Touch</a>
+              <a class="nav-link" href="About.html">About Us</a>
           </li>
+      <li class="nav-item">
+        <a class="nav-link" href="contact.html">Get In Touch</a>
     </ul>
   </div>
 </nav>
 
   <div class="container mt-5">
-    <h1>Contact Us</h1>
-    <form action="https://formspree.io/your-formspree-email" method="post">
-      <div class="form-group">
-        <label for="name">Name:</label>
-        <input type="text" class="form-control" id="name" name="name" required>
-      </div>
-      <div class="form-group">
-        <label for="email">Email:</label>
-        <input type="email" class="form-control" id="email" name="email" required>
-      </div>
-      <div class="form-group">
-        <label for="message">Message:</label>
-        <textarea class="form-control" id="message" name="message" rows="5" required></textarea>
-      </div>
-      <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
-  </div>
+    <!-- Content specific to the page -->
+    <h1>About Us</h1> 
+    <p>Contact us via email: <a href="mailto:info@rentacar.com">info@rentacar.com</a></p>
 
+  </div>
 
 </body>
 </html>
