--- a/cars.html
+++ b/cars.html
@@ -10,77 +10,122 @@
 
     <!-- Add your custom CSS file if needed -->
     <style>
-        /* Style to set a fixed size for the images */
-        
-        .car-image {
-            width: 150px; /* Adjust as needed */
-            height: 100px; /* Adjust as needed */
-            object-fit: cover;
+      /* Style to set a fixed size for the images */
+      .car-image {
+          width: 150px; /* Adjust as needed */
+          height: 100px; /* Adjust as needed */
+          object-fit: cover;
+          border: thick;
+      }
+
+      /* Custom background colors for table cells */
+      .car-type {
+          background-image: brown; /* Adjust as needed */
+          padding: 20px;
+          text-align: center;
+      }
+
+      /* Adjustments for table layout */
+      .car-table {
+          width: 100%;
+      }
+
+      .car-table td {
+          width: 33%; /* Equal width for each column */
+      }
+      /* Rent Now button style */
+      .rent-now {
+            text-align: center;
+            margin-top: 30px;
         }
-        
-    </style>
+  </style>
 </head>
 <body style="background-color: darksalmon;">
 
-  <div class="img-container" 
-  style="align-content: center; background-image:url(lo.jpg); padding: 170px; background-position: center;background-repeat: no-repeat;">
+  <div class="img-container" style="align-content: center; background-image:url(lo.jpg); padding: 170px; background-position: center;background-repeat: no-repeat;">
   </div>
+  
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="index.html">Auto Cars</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+              <li class="nav-item ">
+                  <a class="nav-link" href="index.html">Home</a>
+              </li>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item active">
+                      <a class="nav-link" href="cars.html">Fleet</a>
+                  </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="services.html">Locations</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="About.html">About Us</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="contact.html">Get In Touch</a>
+              </li>
+          </ul>
+      </div>
+  </nav>
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="index.html">Auto Cars</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-          <a class="nav-link" href="index.html">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="cars.html">Fleet</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="services.html">Locations</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="About.html">About Us</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="contact.html">Get In Touch</a>
-    </ul>
-  </div>
-</nav>
-
-  <div class="container mt-5">
-    <h1>Available Car Types</h1>
-    <div class="row">
-      <div class="col-md-4">
-        <img src="luxury.webp" alt="Luxury Car" class="car-image">
-        <h3>Luxury</h3>
-      </div>
-      <div class="col-md-4">
-        <img src="Electronic.jpg" alt="Economic Car" class="car-image">
-        <h3>Electronic</h3>
-      </div>
-      <div class="col-md-4">
-        <img src="seadan.webp" alt="Sedan Car" class="car-image">
-        <h3>Seadan</h3>
-      </div>
-      <div class="col-md-4">
-        <img src="sport.jpg" alt="Sedan Car" class="car-image">
-        <h3>Sports</h3>
-      </div>
-      <div class="col-md-4">
-        <img src="suv.jpg" alt="Sedan Car" class="car-image">
-        <h3>SUV</h3>
-      </div>
-      <div class="col-md-4">
-        <img src="off-road.webp" alt="Sedan Car" class="car-image">
-        <h3>OFF-ROADS</h3>
-      </div>
-      <!-- Repeat the above structure for each car type -->
+      <!-- Rent Now button -->
+      <div class="rent-now">
+        <button type="button" class="btn btn-primary btn-lg">Rent Now</button>
     </div>
     <!-- Add more content as needed -->
+</div>
+  
+  <div class="container mt-5">
+      <h1>Available Car Types</h1>
+      <table class="car-table">
+          <tr>
+              <td class="car-type">
+                  <a href="#" id="luxuryCarLink">
+                      <img src="luxury.webp" alt="Luxury Car" class="car-image">
+                      <h3>Luxury</h3>
+                  </a>
+              </td>
+              <td class="car-type">
+                  <a href="#" id="economicCarLink">
+                      <img src="Electronic.jpg" alt="Economic Car" class="car-image">
+                      <h3>Economic</h3>
+                  </a>
+              </td>
+              <td class="car-type">
+                  <a href="#" id="sedanCarLink">
+                      <img src="seadan.webp" alt="Sedan Car" class="car-image">
+                      <h3>Sedan</h3>
+                  </a>
+              </td>
+          </tr>
+          <tr>
+              <td class="car-type">
+                  <a href="#" id="sportsCarLink">
+                      <img src="sport.jpg" alt="Sports Car" class="car-image">
+                      <h3>Sports</h3>
+                  </a>
+              </td>
+              <td class="car-type">
+                  <a href="#" id="suvCarLink">
+                      <img src="suv.jpg" alt="SUV Car" class="car-image">
+                      <h3>SUV</h3>
+                  </a>
+              </td>
+              <td class="car-type">
+                  <a href="#" id="offRoadCarLink">
+                      <img src="off-road.webp" alt="Off-Road Car" class="car-image">
+                      <h3>Off-Roads</h3>
+                  </a>
+              </td>
+          </tr>
+          <!-- Add more rows as needed -->
+      </table>
+      <!-- Add more content as needed -->
   </div>
 
 
