--- a/services.html
+++ b/services.html
@@ -36,15 +36,17 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-      <li class="nav-item active">
+      <li class="nav-item ">
           <a class="nav-link" href="index.html">Home</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="cars.html">Fleet</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="services.html">Locations</a>
-      </li>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+              <a class="nav-link" href="services.html">Location</a>
+          </li>
       <li class="nav-item">
         <a class="nav-link" href="About.html">About Us</a>
       </li>
